# catherding

./: .gitignore  CLAUDE.md  README-scripts.md  README.md  install-readme.md  install.sh  uninstall.sh
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit
claude-optimizing/: README.md  claude-additions.md  install.sh  pyproject.toml  uninstall.sh
claude-skills-tester-cli/: run.sh
cli/site-manager/: pyproject.toml
cli/site-manager/src/site_manager/: __init__.py  __main__.py  check.py  claude.py  cli.py  deploy.py  dns_check.py  manifest.py  repair.py  status.py
cli/site-manager/src/site_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/site-manager/tests/: test_cli.py  test_deploy.py  test_manifest.py
cli/webinator/: pyproject.toml
cli/webinator/src/webinator/: __main__.py  cli.py  dns.py  status.py
cli/webinator/src/webinator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/webinator/src/webinitor.egg-info/: PKG-INFO
cli/webinator/tests/: test_cli.py  test_config.py  test_domains.py
devtools-local-web-server/: README.md  install.sh  uninstall.sh
docs/: zsh-completion.md
policies/: INDEX.md
research/: claude-code-usage-limits.md
rules/: always-use-worktrees-and-prs.md  authoring-ground-rules.md  cookbook-statusline.sh  extension-authoring.md  permissions.md  skill-authoring.md  skill-versioning.md
scripts-git/: cc-branch-hygiene.py  cc-since.py  (+1 more)
skills/configurator/cli/: pyproject.toml
skills/configurator/cli/src/site_manager/: check.py  cli.py  e2e.py  test.py  verify.py  verify_all.py
skills/configurator/cli/tests/: test_manifest.py  test_version.py
skills/configurator/configurator-cli/: pyproject.toml
skills/configurator/configurator-cli/src/configurator/: __main__.py  cli.py  deploy.py  web.py
skills/configurator/configurator-cli/src/configurator/features/: __init__.py  ab_testing.py  admin.py  analytics.py  api_view.py  auth.py  backend.py  base.py  capabilities.py  credentials.py  dashboard.py  data_model.py  email.py  feature_flags.py  feedback.py  logging.py  login_tracking.py  pausing.py  project.py  sms.py  text_size.py  theme.py  user_settings.py  website.py
skills/configurator/configurator-cli/tests/: run_tests.py  test_config_io.py  test_deploy.py  test_drafts.py  test_find_repo.py  test_identifiers.py  test_load_changes_since.py  test_load_manifest.py  test_manifest_to_config.py  test_parse_version.py  test_web.py
skills/configurator/configurator-cli/tests/features/: test_ab_testing.py  test_admin.py  test_analytics.py  test_api_view.py  test_auth.py  test_backend.py  test_capabilities.py  test_credentials.py  test_dashboard.py  test_data_model.py  test_email.py  test_feature_flags.py  test_feedback.py  test_logging.py  test_login_tracking.py  test_pausing.py  test_project.py  test_registry.py  test_sms.py  test_text_size.py  test_theme.py  test_user_settings.py  test_website.py
(+509 files in other folders)
