[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "site-manager"
version = "0.1.0"
description = "CLI for managing multi-site web projects — deploy, status, verify, test"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Fullerton" }]
dependencies = []

[project.scripts]
site-manager = "site_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
