[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webinator"
dynamic = ["version"]
description = "CLI for web infrastructure management — domains, DNS, deployments"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Fullerton" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
webinator = "webinator.cli:main"

[tool.setuptools.dynamic]
version = {attr = "webinator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
