[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configurator"
dynamic = ["version"]
description = "Interactive project configurator — creates deployment specs for Claude"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mike Fullerton" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
configurator = "configurator.cli:main"

[tool.setuptools.dynamic]
version = {attr = "configurator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
